fix: pagination not showing for file list, show 10 files now

--- a/root/assets/css/base.css
+++ b/root/assets/css/base.css
@@ -339,7 +339,7 @@ a {
     color: var(--text-color);
     border-radius: var(--content-border-radius);
     background-color: var(--alt-content-bg-color);
-    padding: 1.25rem;
+    padding: 1rem;
 }
 
 * {
